# aestival

./: .gitignore  README.md  build.py  package-lock.json  package.json
.github/workflows/: build.yml
src/: app.css
src-python/: bridge.py  launcher.py  main.py  nuitka-crash-report.xml  output_paths.txt  pyproject.toml  requirements.txt  wallpaper_config.json
src-python/adapters/: __init__.py  bandia_adapter.py  base.py  crashu_adapter.py  dissolvef_adapter.py  enginev_adapter.py  findz_adapter.py  kavvka_adapter.py  linedup_adapter.py  linku_adapter.py  migratef_adapter.py  migratefnode_adapter.py  movea_adapter.py  owithu_adapter.py  rawfilter_adapter.py  recycleu_adapter.py  reinstallp_adapter.py  repacku_adapter.py  scoolp_adapter.py  sleept_adapter.py  trename_adapter.py
src-python/aestival_backend/: __init__.py  __main__.py
src-python/api/: backup.py  files.py  terminal_ws.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/lib/api/: backend.ts  index.ts  platform.ts
src/lib/components/blocks/: BlockCard.svelte  NodeLayoutRenderer.svelte  TabBlockCard.svelte  TabConfigPanel.svelte  TabGroupCard.svelte  blockRegistry.ts  index.ts
src/lib/components/execution/: LogViewer.svelte
src/lib/components/flow/: FloatingPalette.svelte  FloatingToolbar.svelte  FlowCanvas.svelte  FlowToolbar.svelte  FullscreenNodeModal.svelte  NodePalette.svelte  NodeTreePalette.svelte  TitleBar.svelte
src/lib/components/input/: PathInput.svelte
src/lib/components/layout/: ThemeImportDialog.svelte  TitleBar.svelte
src/lib/components/nodes/: BaseNode.svelte  CrashuNode.svelte  EngineVNode.svelte  InputNode.svelte  index.ts  (+11 more)
src/lib/services/: api.ts
src/lib/stores/: autoBackup.svelte.ts  backend.ts  fullscreenNode.svelte.ts  index.ts  layoutPresets.ts  nodeLayoutStore.ts  nodeRegistry.ts  nodeStateStore.ts  theme.svelte.ts
src/lib/styles/: container-responsive.css
src/lib/types/: index.ts  repacku.ts
src/lib/utils/: sizeUtils.ts
src/routes/: +layout.svelte
(+87 files in other folders)
